[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selfie-k2v2"
version = "0.1.0"
description = "SELFIE interpretation on K2-V2 writer/editor LangGraph agents"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.45",
    "accelerate",
    "bitsandbytes",
    "langgraph",
    "pandas",
    "torch",
]

[tool.setuptools.packages.find]
include = ["selfie_k2v2*"]
